--- a/templates/flows/flow_export_results.haml
+++ b/templates/flows/flow_export_results.haml
@@ -4,12 +4,14 @@
 -block pre-form
   .mb-4
     -blocktrans trimmed
-      Will contain results for all contacts that responded to this flow. You may optionally
-      include up to 10 contact fields and URN types whose values will also be included with each run.
+      Flow exports will include the results for each contact that has passed through the flow. You may optionally
+      include up to 10 contact fields and URN types whose values will also be exported with each run.
 
 -block modal-extra-style
   {{ block.super }}
   :css
-    .field_responded_only, .field_include_msgs {
+    .field_include_msgs { /* disabled in UI for now */
       display: none;
     }
+
+
