--- a/templates/request_logs/httplog_read.haml
+++ b/templates/request_logs/httplog_read.haml
@@ -40,7 +40,7 @@
 
   %table.list
     %tbody
-      %tr.border-b(class="{% if obj.is_error or not obj.is_healthy %}warning{% endif %}")
+      %tr.border-b(class="{% if object.is_error or not object.is_healthy %}warning{% endif %}")
         %td(style="width: 30px;")
           .font-normal.text-2xl
             {{ object.status_code|default:"--" }}
