--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -260,12 +260,13 @@
 
         // TODO: migrate to API?
         revisions: '/flow/revisions/{{object.uuid}}/',
-        recents: '/flow/recent_messages/{{object.uuid}}/',
+        recents: '/flow/recent_contacts/{{object.uuid}}/',
         attachments: '/flow/upload_media_action/{{object.uuid}}/',
         languages: base + 'language',
         environment: base + 'environment',
         activity: '/flow/activity/{{object.uuid}}/',
         recipients: '/contact/omnibox?v=2&types=gc',
+        contact: '/contact/read/',
 
         {% if can_simulate %}
         simulateStart: '/flow/simulate/{{object.id}}/',
