--- a/templates/contacts/contact_history.haml
+++ b/templates/contacts/contact_history.haml
@@ -53,7 +53,7 @@
         -elif event.channel_event_type == 'mo_call'
           -trans "Incoming Phone call"
           ({{ event.duration|format_seconds }})
-        -elif ch_event.event_type == 'stop_conversation'
+        -elif event.channel_event_type == 'stop_conversation'
           -trans "Contact Opted-Out"
         -else
           -trans "Unknown/Unsupported"
