Button naming adjustment

--- a/templates/channels/types/instagram/claim.haml
+++ b/templates/channels/types/instagram/claim.haml
@@ -31,7 +31,7 @@
 
     #fb-app-connect.flex.mt-4
       .button-primary.connect-facebook
-        -trans "Add Facebook Page"
+        -trans "Add Instagram Business Account"
 
     #throbber(style="display:none;")
       %temba-loading
