Only display crisp support widget if brand supports it

--- a/templates/utils/analytics/crisp/frame_top.html
+++ b/templates/utils/analytics/crisp/frame_top.html
@@ -1,3 +1,4 @@
+{% if brand.support_widget %}
 <script type="text/javascript">
     window.CRISP_WEBSITE_ID = "{{ crisp_website_id }}";
     {% if crisp_token_id %}window.CRISP_TOKEN_ID = "{{ crisp_token_id }}";{% endif %}
@@ -8,3 +9,4 @@
     window.$crisp.push(["set", "user:email", ["{{request.user.email|escapejs}}", "{{request.user.get_settings.verification_token|escapejs}}"]]);
     window.$crisp.push(["set", "user:nickname", ["{{request.user.first_name|escapejs}} {{request.user.last_name|escapejs}}"]]);
 </script>
+{% endif %}
