Fix description in refresh_token

--- a/templates/channels/types/instagram/refresh_token.haml
+++ b/templates/channels/types/instagram/refresh_token.haml
@@ -12,7 +12,7 @@
   .mt-4.card
     #fb-channel-error.mb-4(style="display:none;")
       %p
-        -trans "Error reconnecting Facebook page. Please retry"
+        -trans "Error reconnecting Instagram Business Account. Please retry"
 
     #fb-app-connect.flex
       .button-primary.connect-facebook
