--- a/templates/channels/types/instagram/claim.haml
+++ b/templates/channels/types/instagram/claim.haml
@@ -11,7 +11,7 @@
       %ol.steps
         %li
           -trans "The page must be linked to your instagram business account, so check how to link"
-          %a{:href => 'https://help.instagram.com/399237934150902'} here
+          %a(href="https://help.instagram.com/399237934150902") here
           first.
 
         %li
