--- a/templates/flows/flow_results.haml
+++ b/templates/flows/flow_results.haml
@@ -53,7 +53,7 @@
           border-color: inherit;
           border-bottom: 1px solid #fff;
         }
-         
+
         .after {
           position: relative;
         }
@@ -495,6 +495,10 @@
       $('[data-toggle="tooltip"]').tooltip();
     });
 
+    $(document).on('change', function () {
+      console.log(this.attr("total-runs"))
+    })
+
     $('a[data-toggle="tab"]').on('shown.bs.tab', function(e){
       // reflow our charts when analytics is shown on the chance their dimensions have changed
       if (e.currentTarget.innerText == 'Analytics') {
@@ -714,6 +718,15 @@
       $("#runs-responded").val(value);
     }
 
+    function setTotalRuns() {
+      $("#total-runs-text span").text("...")
+      setTimeout(function () {
+        let runsValue = $("#total-runs-value").attr("total-runs");
+        if (runsValue)
+        $("#total-runs-text span").text(runsValue);
+      }, 100)
+    }
+
 -block content
 
   %temba-dialog#confirm-run-delete(header='{{ _("Delete Run")|escapejs }}' primaryButtonName='{{ _("Delete")|escapejs }}' destructive='true')
@@ -788,7 +801,8 @@
             ic-on-beforeTrigger: 'configToShowResponded("false");',
             ic-trigger-on:"click",
             ic-target:"#results_run_table",
-            ic-indicator:"#indicator"}
+            ic-on-success: 'setTotalRuns();',
+            ic-indicator:"#indicator"},
             -trans "All"
           .runs-show-sep
             |
@@ -798,6 +812,7 @@
               ic-on-beforeTrigger: 'configToShowResponded("true");',
               ic-trigger-on:"click",
               ic-target:"#results_run_table",
+              ic-on-success: 'setTotalRuns();',
               ic-indicator:"#indicator"}
               -trans "Responded"
 
@@ -805,6 +820,10 @@
             .add-columns.select.flex-grow.pl-12.pr-4
               .selection
                 %temba-select#select-columns(searchable="true" onchange="handleColumnSelection(this)" placeholder='{{_("More Columns")|escapejs}}')
+
+          #total-runs-text
+            -trans "Total Matching"
+            %span
 
           %table
             %thead
@@ -828,7 +847,7 @@
                     .remove.icon-close{ onclick: 'hideColumn({{forloop.counter0}});' }
 
             %tbody{id:"results_run_table"}
-              %tr{ic-append-from:"/flow/run_table/{{object.id}}?after={{request.GET.after}}&before={{request.GET.before}}&q={{request.GET.q}}&contact_query={{request.GET.contact_query}}", ic-trigger-on:"load", ic-target:"#results_run_table", ic-indicator:"#indicator"}
+              %tr{ic-append-from:"/flow/run_table/{{object.id}}?after={{request.GET.after}}&before={{request.GET.before}}&q={{request.GET.q}}&contact_query={{request.GET.contact_query}}", ic-trigger-on:"load", ic-target:"#results_run_table", ic-indicator:"#indicator", ic-on-success:"setTotalRuns();"}
 
     #links.tab-pane
       - if trackable_links
