--- a/templates/orgs/login/login.haml
+++ b/templates/orgs/login/login.haml
@@ -19,14 +19,14 @@
           {{ errors }}
 
     .mt-4
-      %temba-textinput(name='username' maxlength=254 placeholder='{{_("Email Address")|escapejs}}' value='{% if form.username.value%}{{form.username.value|escape}}{%endif%}')
+      %input.input(type='text' name='username' maxlength=254 placeholder='{{_("Email Address")|escapejs}}' value='{% if form.username.value%}{{form.username.value|escape}}{%endif%}')
 
     -if form.username.errors
       .alert-error.mt-4
         {{form.username.errors}}
 
     .mt-4
-      %temba-textinput(name='password' placeholder='{{_("Password")|escapejs}}' password="true")
+      %input.input(type="password" name='password' placeholder='{{_("Password")|escapejs}}')
     
     -if form.password.errors
       .alert-error.mt-4
