--- a/templates/campaigns/campaignevent_update.haml
+++ b/templates/campaigns/campaignevent_update.haml
@@ -16,6 +16,8 @@
     var body = modax.shadowRoot.querySelector(".modax-body");
     var languageLinks = body.querySelectorAll(".show_language");
     var deliveryHourOptions = body.querySelector("#send-at");
+    var flowSelect = body.querySelector("temba-select[name='flow_to_start']");
+    var modeSelect = body.querySelector("temba-select[name='flow_start_mode']");
     var unitSelect = body.querySelector("temba-select[name='unit']");
     var eventTypeSelect = body.querySelector("temba-select[name='event_type']");
     var flowSection = body.querySelector("#flow-section");
@@ -30,11 +32,23 @@
         body.querySelector("." + event.target.dataset.iso).style.display = 'block';
       });
 
-      // initial value
       body.querySelector("." + link.dataset.iso).style.display = display;
       display = 'none';
-
     }
+    
+    flowSelect.addEventListener('change', function(event) {
+      var option = event.target.values[0];
+      var isBackground = option.type == "B";
+      console.log("isBackground", isBackground)
+      
+      if (isBackground) {
+        body.querySelector("#event-flow-start-mode").classList.add("hide");
+        body.querySelector("#background-flow-message").classList.remove("hide");
+      } else {
+        body.querySelector("#event-flow-start-mode").classList.remove("hide");
+        body.querySelector("#background-flow-message").classList.add("hide");
+      }
+    });
 
     eventTypeSelect.addEventListener('change', function(event){
       var type = event.target.values[0].value;
@@ -127,6 +141,41 @@
       flex-grow: 1;
     }
 
+    #event-flow-start-mode.hide {
+      opacity: 0;
+      max-height: 0;
+      pointer-events: none;
+    }
+
+    #event-flow-start-mode {
+      opacity: 1;
+    }
+    
+    #background-flow-message {
+      opacity: 1;
+      transition: margin 200ms ease-in-out;
+      margin-bottom: 16px;
+      margin-top: -2em;
+      padding: 0.5em 1em;
+      background: #f3f3f3;
+      padding-top: 1.5em;
+      border-radius: var(--curvature);
+      font-size: .9em;
+      color: rgba(0,0,0,.5);
+      box-shadow: inset 0px 0px 4px rgb(0 0 0 / 10%)
+    }
+
+    #background-flow-message.hide {
+      opacity: 0;
+      max-height: 0;
+      margin-bottom: 0px;
+      margin-top: -4em;
+      margin-bottom: 2em;
+      pointer-events: none;
+
+    }
+
+
     .start-mode-help {
       display: inline-block;
       width:262px;
@@ -175,11 +224,15 @@
 
   #flow-section
     -render_field 'flow_to_start'
-
-    #event-flow-start-mode
+    
+    #event-flow-start-mode(class="{% if form.initial.flow_to_start.flow_type == 'B' %}hide{%endif%}")
       .start-mode-help
         -trans "If the contact is already active in a flow"
       -render_field 'flow_start_mode'
+
+    #background-flow-message(class="{% if form.initial.flow_to_start.flow_type != 'B' %}hide{%endif%}")
+      -blocktrans trimmed
+        This is a background flow. When it triggers, it will run it for all contacts without interruption.
 
   #schedule-section
     #field-offset
