Feat/back button missing (#259)
* feat: back button in editor page and non sidebar pages

* fix: back button layout

* fix: missing newline

--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -283,6 +283,11 @@
   .top-bar.pb-2
     .flex.flex-col.pt-4
       .flex.px-6.pb-2
+
+        -if use_weni_layout and not show_sidemenu
+          %div.mr-4.pt-2
+            -include "../weni/weni_navigation_control.haml"
+
         .title.flex-grow
           .flex.page-title
             -if flow.flow_type == 'V'
