--- a/templates/orgs/user_account.haml
+++ b/templates/orgs/user_account.haml
@@ -17,8 +17,8 @@
     .text-xl
       Not ready for the new interface?
     .mt-1
-      -trans "Go back to the "
+      Go back to the
       %span.linked(onclick="leaveNewInterface()")<
-        -trans "old one"
+        old one
       for now.
     
