Add double quotes

--- a/templates/orgs/org_opt_out_message.haml
+++ b/templates/orgs/org_opt_out_message.haml
@@ -1,4 +1,4 @@
--extends 'smartmin/update.html'
+-extends "smartmin/update.html"
 -load smartmin i18n humanize
 
 
@@ -7,4 +7,4 @@
 
 
 -block fields
-  -render_field 'message'
+  -render_field "message"
