Styling changes merging new and old

--- a/templates/channels/channel_claim.haml
+++ b/templates/channels/channel_claim.haml
@@ -44,7 +44,7 @@
               will send and receive messages for you. You will only need one phone per country depending on
               message volume. Don't worry! The people you are texting with can still use basic phones.
 
-    .bg-gray-200.-mx-128.px-128.py-12.mt-16
+    .bg-gray-200.-mx-6.px-6.py-12.mt-16.overflow-hidden
       .title.mb-4
         -trans "Social Network Channels"
 
