--- a/templates/channels/types/vk/config.haml
+++ b/templates/channels/types/vk/config.haml
@@ -1,6 +1,6 @@
 -load i18n
 
-.card
+.card.flex-shrink-0
   -blocktrans trimmed
     To complete the configuration you will need to enter a few things on your VK account.
   -blocktrans trimmed with option='<div class="code inline-block py-1">Message received</div>'
@@ -23,7 +23,7 @@
     .mt-2  
       Check the option {{option}}
 
-.card
+.card.flex-shrink-0
   .subtitle
     -trans "Webhook URL"
 
