--- a/templates/channels/types/external/config.haml
+++ b/templates/channels/types/external/config.haml
@@ -3,7 +3,7 @@
 -blocktrans trimmed
   To finish configuring your connection you'll need to set the following callback URLs on your service or aggregator.
 
-.card.mt-6
+.card.mt-6.flex-shrink-0
   .title
     -trans "Send URL"
 
@@ -31,7 +31,7 @@
 
 
 -if object.role != 'S'
-  .card.mt-6
+  .card.mt-6.flex-shrink-0
     .title
       -trans "Received URL"
     .code.inline-block.m-0
@@ -53,7 +53,7 @@
         .mt-2.text-gray-400.break-all
           from=%2B250788123123&text=Love+is+patient.+Love+is+kind.&date=2012-04-23T18:25:43.511Z
 
-  .card.mt-6
+  .card.mt-6.flex-shrink-0
     .title
       -trans "Sent URL"
     .code.inline-block.m-0
@@ -75,7 +75,7 @@
           id=2599235
 
 
-  .card.mt-6
+  .card.mt-6.flex-shrink-0
     .title
       -trans "Delivered URL"
     .code.inline-block.m-0
@@ -96,7 +96,7 @@
         .mt-2.text-gray-400
           id=2599235
 
-  .card.mt-6
+  .card.mt-6.flex-shrink-0
     .title
       -trans "Failed URL"
     .code.inline-block.m-0
@@ -117,7 +117,7 @@
         .mt-2.text-gray-400
           id=2599235
 
-  .card.mt-6
+  .card.mt-6.flex-shrink-0
     .title
       -trans "Contact Opt out/Stopped URL"
   
