--- a/templates/channels/types/line/config.haml
+++ b/templates/channels/types/line/config.haml
@@ -9,7 +9,7 @@
   -blocktrans trimmed
     Configure "Callback URL" in the channel page (the same page which get the information Channel Secret and Channel Access Token) by clicking on the "Edit" button, filling the field "webhook URL" and pressing on the "Save" button.
 
-.card.mt-4
+.card.mt-4.flex-shrink-0
   .subtitle
     -trans "Callback URL"
 
