--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -24,8 +24,7 @@
     }
 
     #rp-flow-editor #simulator {
-      top: -180px;
-      margin-left: 20px;
+      top: 20px;
     }
 
     #header *, #top-menu *, .org-header * {
@@ -127,6 +126,20 @@
     }
 
     #grid {
+      overflow: auto;
+      z-index: 5;
+    }
+
+    #shadow {
+      box-shadow: inset 0 7px 9px -10px rgba(0,0,0,0.4);
+      z-index: 10;
+
+    }
+
+
+    #preview {
+      margin-bottom: 14px;
+      margin-left: -14px;
     }
 
     #rp-flow-editor {
@@ -140,11 +153,11 @@
     }
 
     #rp-flow-editor #canvas-container > div {
-      box-shadow: inset 0 7px 9px -10px rgba(0,0,0,0.4);
+      // box-shadow: inset 0 7px 9px -10px rgba(0,0,0,0.4);
     }
 
     #rp-flow-editor #canvas-container #canvas:after {
-      box-shadow: inset 0 7px 9px -10px rgba(0,0,0,0.4);
+      // box-shadow: inset 0 7px 9px -10px rgba(0,0,0,0.4);
       
     }
 
@@ -203,7 +216,7 @@
     });
 
     function handleEditorLoaded() {
-      $('temba-loading').hide();
+      $('.editor-loader').hide();
       $('#rp-flow-editor > div').css('opacity', '1');
     }
 
@@ -308,7 +321,8 @@
         in this flow and no translation exists for their language or the default language of the workspace,
         communication with that contact will default to <b>{{ language }}</b>.
 
+  #shadow.pb-5.-mb-5
   #grid.h-full
-    <temba-loading units="10" size="8"></temba-loading>
+    <temba-loading class="editor-loader" units="10" size="8"></temba-loading>
     #rp-flow-editor
 
