--- a/templates/flows/flow_editor_spa.haml
+++ b/templates/flows/flow_editor_spa.haml
@@ -4,17 +4,13 @@
 -block extra-style
   {{block.super}}
   :css
-    .spa-container {
+    .spa-content {
       padding: 0;
     }
 
     .spa-title {
-      margin: 0em;
-      border-radius: 0;
-    }
-
-    #rp-flow-editor {
-      
+      // margin: 0em;
+      // border-radius: 0;
     }
 
     .more .submenu {
@@ -33,8 +29,10 @@
     }
 
     #grid {
-      overflow-y: auto;
+      overflow: auto;
       z-index: 0;
+      border: 1px solid #e7e7e7;
+      border-radius: var(--curvature);
     }
 
     #simulator-tab {
@@ -49,6 +47,9 @@
       margin-top: 0.5rem;
     }
 
+    .spa-footer {
+      display:none;
+    }
 
 -block alert-messages
   -if is_starting or messages or user_org.is_suspended
@@ -61,6 +62,9 @@
 
 -block page-container
 
+  :javascript
+    document.querySelector("temba-menu").collapsed = true;
+
   %temba-modax#send-message-modal{ header:"Send Message" }
 
   %temba-dialog.hide#confirm-language(header='{{_("Change Language")|escapejs}}' primaryButtonName='{{_("Update")|escapejs}}')
@@ -72,5 +76,5 @@
         communication with that contact will default to <b>{{ language }}</b>.
 
   #grid
-    <temba-loading units="10" size="8"></temba-loading>
+    <temba-loading class="editor-loader" units="10" size="8"></temba-loading>
     #rp-flow-editor
