--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -220,7 +220,7 @@
 
     -block interface-option
       -if user.is_beta and "nyaruka" in user.email
-        .text-center.px-3.text-sm.py-1(style='background:rgba(0,0,0,.75);z-index:10000;position:fixed;bottom:0px;width:100%;color:#fff')
+        #preview.text-center.px-3.text-sm.py-1(style='background:rgba(0,0,0,.75);z-index:10000;position:fixed;bottom:0px;width:100%;color:#fff')
           Preview the
           %span.linked(onclick="switchToNewInterface()")<
             new interface
