--- a/templates/channels/channellog_read.haml
+++ b/templates/channels/channellog_read.haml
@@ -18,7 +18,7 @@
       -block log-recipient
         -if object.msg
           %temba-anchor(href='{% url "contacts.contact_read" object.msg.contact.uuid %}')
-            {{ object.msg.contact_urn.path }}
+            {{ object.msg.contact_urn.get_display }}
 
     .inline-flex.mr-8
       .font-normal.mr-2
